--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -187,7 +187,7 @@ Air temperature ($T_{air}$) often shows little variation across the vertical gra
 The $T_{air}$ gradient from the upper canopy to the understory varies with factors such as local topography, vertical air mixing, cloud cover,  vegetation type and sensible heat emissions [@defrenneForestMicroclimatesClimate2021]. 
 Typically, dense canopies buffer understories from high maximum $T_{air}$ more than open canopies, *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than open canopy understories or nearby clearings [@missonPartitioningForestCarbon2007; @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
 Notably, this pattern can be reversed in open forests. Analogous to a 'canopy greenhouse effect', in open forests, below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$. This is due to turbulent air mixing and the thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b, @hadleyInfluenceKrummholzMat1987; @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].
-These usually-modest gradients in $T_{air}$ combine with the above-described gradients in micrometeorological conditions to shape $T_{leaf}$ patterns in canopies.
+These usually-modest gradients in $T_{air}$ combine with the above-described gradients in micrometeorological conditions to shape $T_{leaf}$ patterns within canopies.
 
 ## 2. Leaf temperature 
 
