--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -73,6 +73,9 @@ I like your figures, but maybe consider homogenizing a little bit the styles for
 
 L205-206 Maybe add some references. How many degrees? In your Figure 3 there is not really a difference between Tleaf and Tair when SWR = 0. Given that the transpiration nearly stops at night (high humidity, low conductance) I would expect Tleaf – Tair to be very close to zero.
 
+**Added the following references to L205-206:**
+**Therefore, leaves are typically cooler than the air at night, and under some daytime conditions (cloudy skies, high wind speeds, and high $T_{air}$)[@rey-sanchez_spatial_2016; @vogelLeavesLowestHighest2009; @cavaleriColdbloodedForestsWarming2020]**
+
 *Agree, but we're only changing the one variable at a time. Just need to make this clear.*
 
 *Yes, night time conditions entail a shift in Tair, which in our case is constant*
