--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -158,7 +158,7 @@ While the focus here is on vertical gradients, it is important to note that in h
 
 Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).
 Leaf area density (*i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
-Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high in the understory as well, sometimes with undulating patterns [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,@terborghVerticalComponentPlant1985; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989]. 
+Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high as well, sometimes with undulating patterns [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,@terborghVerticalComponentPlant1985; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989]. 
 In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be predominantly accumulated in the lower canopy or understory layers [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`a, @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001;  @bonan_ecological_2016]. 
 Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @hanberryOpenForestEcosystems2020a]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019]. 
