--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -495,8 +495,8 @@ Although understory leaves are unlikely to face the same absolute extremes of $T
 A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021; @heChangesShadowShifting2018].
 However, with $T_{air}$ more frequently equaling or exceeding photosynthetic optima, occasional exposure to sunflecks coupled with lower capacity to shed excess heat may prove disadvantageous. 
 Moreover, increased nighttime $T_{air}$ may disproportionately increase respiration relative to photosynthesis, thereby negatively affecting the carbon balance.
-While it is currently difficult to predict whether canopy or understory photosynthesis is likely to be more severely affected by higher $T_{air}$ (see section 4.2), tree-ring evidence indicates that understory trees tend to exhibit greater reductions in growth during unusually hot growing seasons [section 5.1, Fig `r fig_treerings`b, @rollinsonClimateSensitivityUnderstory2020].
-Thus, while canopy trees are probably more vulnerable to mortality from distinct heat-related disturbances, such as drought or heat waves, trees in the more buffered understory may be more negatively affected by chronic stress from warming $T_{air}$, which may reduce growth and increase the risk of carbon starvation in these small trees, which have lower NSC reserves [@niinemetsResponsesForestTrees2010].
+While it is currently difficult to predict whether canopy or understory photosynthesis is likely to be more severely affected by higher $T_{air}$ (see section 4.2), limited tree-ring evidence indicates that understory trees can exhibit greater reductions in growth during unusually hot growing seasons [section 5.1, Fig `r fig_treerings`b, @rollinsonClimateSensitivityUnderstory2020].
+Thus, while canopy trees are probably more vulnerable to mortality from distinct heat-related disturbances, such as drought or heat waves, trees in the more buffered understory might be more negatively affected by chronic stress from warming $T_{air}$, which may reduce growth and increase the risk of carbon starvation in these small trees, which have lower NSC reserves [@niinemetsResponsesForestTrees2010].
 
 Thus, in synthesis, warming temperatures will affect trees across the vertical gradient, but the stress will be of a different nature at different heights.
 We expect that the tallest trees will be increasingly prone to hydraulic failure and damaging or lethal $T_{leaf}$'s, whereas understory trees may be increasingly prone to carbon starvation, particularly under humid conditions that make it more challenging to shed excess heat.
