--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -181,7 +181,7 @@ Atmospheric CO~2~ concentrations tend to be higher near the ground at night, ass
 
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020a]. 
-In combination with $T_{air}$, RH determines vapor pressure deficit (VPD)-- the driving force of water loss from leaves--which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
+In combination with $T_{air}$, RH determines vapor pressure deficit (VPD) -- the driving force of water loss from leaves -- which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
 The implication is that canopy leaves face higher $g_b$ and associated potential for water and heat loss (see sections 2.2, 4.1).
 
 Air temperature ($T_{air}$) often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).
@@ -425,7 +425,7 @@ This is consistent with the observation that $g_s$ limitation with $T_{air}$ inc
 More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004] -- often combined with greater effective rooting depth -- may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and reduce adjustment of traits related to carbon metabolism during drought [@bartholomewSmallTropicalForest2020]. 
 This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
 
-In turn, the drought sensitivity of woody growth tends to be greater in canopy trees. 
+In turn, the drought sensitivity of woody growth tends to be greater in canopy trees than in smaller trees with less exposed crowns. 
 In the field of dendrochronology, it is generally accepted that tree ring records of large, exposed trees are best suited for climate reconstructions because their annual growth displays the greatest sensitivity to interannual variation in climate [@frittsTreeRingsClimate1976]. 
 However, only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
 These have most commonly found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [Fig. `r fig_treerings`, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021;@anderson-teixeiraJointEffectsClimate2022], corroborating evidence from globally distributed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. 
