--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -66,6 +66,7 @@ Elsa M. Ordway^2,5^,
 Marielle N. Smith^6^,
 Tyeen Taylor^7^,
 Lawren Sack^2^,
+Tom Buckly^8^,
 Kristina J. Anderson-Teixeira^1,3^* 
 
 
@@ -84,6 +85,8 @@ Kristina J. Anderson-Teixeira^1,3^*
 6. Department of Forestry, Michigan State University, East Lansing, MI 48824, USA
 
 7. Department of Civil & Environmental Engineering, University of Michigan, Ann Arbor, MI 48109, USA
+
+8. Department of Plant Sciences; University of California; Davis, CA, 95616, USA
 
 *corresponding author: teixeirak@si.edu; +1 540 635 6546
 
