--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -353,7 +353,7 @@ However, when water supply cannot meet the demands incurred by the high irradian
 In sun leaves, $T_{leaf}$ thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
 The temperature at which $g_s$ is maximal, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021a]. 
 
-Further, tree height also plays a role in determining the gradient of $g_s$ vertically, which has implications for $T_{leaf}$. With an increase in tree height, water travels a longer distance to meet the evaporative demands in sunlit canopy leaves. Longer water path length, higher irradiance and VPD imposes hydraulic constraints in sunlit canopy leaves [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Therefore, although typically $g_s$ increases with light, upper canopy leaves of taller trees have lower $g_s$ and leaf water potential to enable high leaf water-use efficiency [@kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of canopy leaves more than understory leaves, particularly when water availability is limited.
+Further, tree height also plays a role in determining the gradient of $g_s$ vertically, which has implications for $T_{leaf}$. With an increase in tree height, water travels a longer distance to meet the evaporative demands in sunlit canopy leaves. Longer water path length, higher irradiance and VPD imposes hydraulic constraints in sunlit canopy leaves [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Therefore, although typically $g_s$ increases with light, due to hydraulic constraints, upper canopy leaves of taller trees have lower $g_s$ and leaf water potential to enable high leaf water-use efficiency [@kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of canopy leaves more than understory leaves, particularly when water availability is limited.
 
 ### 4.2. Photosynthesis
 
